Gruvbox support and code blocks
Changed theme to Gruvbox-esque, and also fixed erroneous dark-mode
rendering for code blocks

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -53,12 +53,15 @@
 
   @media (prefers-color-scheme: dark) {
     :root {
-      --background-color: #01242e;
-      --heading-color: #eee;
-      --text-color: #ddd;
-      --link-color: #8cc2dd;
-      --visited-color: #8b6fcb;
-      --blockquote-color: #ccc;
+      --background-color: #282828;
+      --heading-color: #fabd2f;
+      --text-color: #ebdbb2;
+      --link-color: #b8bb26;
+      --visited-color: #d65d0e;
+      --blockquote-color: #928374;
+    }
+    .highlight pre {
+      background-color: #1d2021 !important; 
     }
   }
 
