fixed light mode gruvbox

--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,16 @@
     --font-main: Verdana, sans-serif;
     --font-secondary: Verdana, sans-serif;
     --font-scale: 1em;
-    --background-color: #fff;
-    --heading-color: #222;
-    --text-color: #444;
-    --link-color: #3273dc;
-    --visited-color: #8b6fcb;
-    --blockquote-color: #222;
+    --background-color: #f2e5bc;
+    --heading-color: #fb4934;
+    --text-color: #282828;
+    --link-color: #79740e;
+    --visited-color: #d65d0e;
+    --blockquote-color: #7c6f64;
+  }
+
+  .highlight pre {
+    background-color: #282828 !important;
   }
 
   @media (prefers-color-scheme: dark) {
